[package]
name = "llama2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
memmap2 = "0.7"
rayon = "1.5"

[profile.release]
debug = true

[features]
model_size = []
