[package]
name = "llama2_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
cust = "0.3.2"
memmap2 = "0.7"
rayon = "1.5"
rand = "0.8.5"
half = "2.3.1"

[[bin]]
name = "check"
path = "src/gptq_cuda2.rs"

[profile.release]
debug = true

[features]
model_size = []
